--- a/package.json
+++ b/package.json
@@ -99,11 +99,12 @@
     "external:deploy-assets-kovan": "npm run compile && hardhat --network kovan external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
-    "kovan:dev:halo": "hardhat halo:dev:kovan --network kovan",
+    "kovan:dev:halo": "hardhat halo:dev --withmocktokens false --network kovan",
     "kovan:dev:halo:configure-incentives": "hardhat external:configure-incentives-emission --network kovan",
     "kovan:dev:halo:deploy-uipooldataprovider": "hardhat deploy-UiPoolDataProvider --network kovan",
     "mainnet:halo:configure-incentives": "hardhat external:configure-incentives-emission --network mainnet",
-    "mainnet:halo:deploy-uipooldataprovider": "hardhat deploy-UiPoolDataProvider --network mainnet"
+    "mainnet:halo:deploy-uipooldataprovider": "hardhat deploy-UiPoolDataProvider --network mainnet",
+    "localhost:dev:halo": "hardhat halo:dev --withmocktokens true --network localhost"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
