--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "kovan:dev:halo:deploy-uiincentivedataprovider": "hardhat deploy-UiIncentiveDataProvider --network kovan",
     "mainnet:halo:configure-incentives": "hardhat external:configure-incentives-emission --network mainnet",
     "mainnet:halo:deploy-uipooldataprovider": "hardhat deploy-UiPoolDataProvider --network mainnet",
-    "localhost:dev:halo": "hardhat halo:dev --withmocktokens true --network localhost"
+    "localhost:dev:halo": "hardhat halo:dev --withmocktokens true --network localhost",
+    "debugger": "npm run compile && TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts ./test-suites/test-aave/pausable-functions.spec.ts"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
