--- a/package.json
+++ b/package.json
@@ -105,7 +105,9 @@
     "kovan:dev:halo:deploy-uiincentivedataprovider": "hardhat deploy-UiIncentiveDataProvider --network kovan",
     "mainnet:halo:configure-incentives": "hardhat external:configure-incentives-emission --network mainnet",
     "mainnet:halo:deploy-uipooldataprovider": "hardhat deploy-UiPoolDataProvider --network mainnet",
-    "localhost:dev:halo": "hardhat halo:dev --withmocktokens true --network localhost"
+    "localhost:dev:halo": "hardhat halo:dev --withmocktokens true --network localhost",
+    "external:halo:deploy-assets-kovan": "npm run compile && hardhat --network kovan external:deploy-new-asset-halo --symbol ${SYMBOL} --verify",
+    "external:halo:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset-halo --symbol ${SYMBOL} --verify"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
