--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
   ],
   "license": "AGPLv3",
   "dependencies": {
+    "@halodao/halodao-contract-addresses": "^0.0.10",
     "axios-curlirize": "^1.3.7",
     "tmp-promise": "^3.0.2"
   },
