--- a/package.json
+++ b/package.json
@@ -106,8 +106,10 @@
     "mainnet:halo:configure-incentives": "hardhat external:configure-incentives-emission --network mainnet",
     "mainnet:halo:deploy-uipooldataprovider": "hardhat deploy-UiPoolDataProvider --network mainnet",
     "localhost:dev:halo": "hardhat halo:dev --withmocktokens true --network localhost",
-    "external:halo:deploy-assets-kovan": "hardhat --network kovan external:deploy-new-asset-halo --symbol ${SYMBOL}",
-    "external:halo:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset-halo --symbol ${SYMBOL} --verify"
+    "external:halo:deploy-assets-kovan": "hardhat --network kovan external:deploy-new-asset-halo --symbol ${SYMBOL} --verify",
+    "external:halo:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset-halo --symbol ${SYMBOL} --verify",
+    "external:halo:deploy-and-init-assets-kovan": "hardhat --network kovan external:deploy-and-init-new-asset-halo --symbol ${SYMBOL} --decimal ${DECIMAL} --verify",
+    "external:halo:deploy-and-init-assets-main": "hardhat --network main external:deploy-and-init-new-asset-halo --symbol ${SYMBOL} --decimal ${DECIMAL} --verify"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
