--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "eth-sig-util": "2.5.3",
     "ethereum-waffle": "3.0.2",
     "ethereumjs-util": "7.0.2",
-    "ethers": "^5.0.19",
+    "ethers": "^5.5.1",
     "globby": "^11.0.1",
     "hardhat": "^2.2.0",
     "hardhat-gas-reporter": "^1.0.0",
@@ -174,6 +174,7 @@
   ],
   "license": "AGPLv3",
   "dependencies": {
+    "@anders-t/ethers-ledger": "^1.0.4",
     "axios-curlirize": "^1.3.7",
     "tmp-promise": "^3.0.2"
   },
