--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
   "license": "AGPLv3",
   "dependencies": {
     "axios-curlirize": "^1.3.7",
+    "eth-provider": "^0.13.6",
     "tmp-promise": "^3.0.2"
   },
   "keywords": [
