Add goerli in deploy scripts

--- a/package.json
+++ b/package.json
@@ -99,6 +99,10 @@
     "external:deploy-assets-kovan": "npm run compile && hardhat --network kovan external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
+    "goerli:dev:halo": "hardhat halo:dev --withmocktokens false --network goerli",
+    "goerli:dev:halo:configure-incentives": "hardhat external:configure-incentives-emission --network goerli",
+    "goerli:dev:halo:deploy-uipooldataprovider": "hardhat deploy-UiHaloPoolDataProvider --network goerli",
+    "goerli:dev:halo:deploy-uiincentivedataprovider": "hardhat deploy-UiIncentiveDataProvider --network goerli",
     "kovan:dev:halo": "hardhat halo:dev --withmocktokens false --network kovan",
     "kovan:dev:halo:configure-incentives": "hardhat external:configure-incentives-emission --network kovan",
     "kovan:dev:halo:deploy-uipooldataprovider": "hardhat deploy-UiHaloPoolDataProvider --network kovan",
