--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,10 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
 cache_path  = 'cache_forge'
+
+[profile.nowarnings]
+
+# ignore solc warnings for missing license and exceeded contract size
+# known error codes are: ["unreachable", "unused-return", "unused-param", "unused-var", "code-size", "shadowing", "func-mutability", "license", "pragma-solidity", "virtual-interfaces", "same-varname"]
+# additional warnings can be added using their numeric error code: ["license", 1337]
+ignored_error_codes = ["unreachable", "unused-return", "unused-param", "unused-var", "code-size", "func-mutability", "license", "pragma-solidity", "virtual-interfaces", "same-varname"]
