--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   ],
   "scripts": {
     "run-env": "npm i && tail -f /dev/null",
-    "anvil:polygon-fork": "anvil --fork-url https://polygon-mainnet.g.alchemy.com/v2/AS3ZTitISrBgwO3os6YF0MoxbGRAga1p@52764552",
+    "": "nodemon --ext js,ts --watch test --watch lib --exec 'clear && yarn test --no-compile'",
+    "watch:script": "nodemon --ext sol --watch script/ --watch test --watch contracts --exec \"clear && forge script script/Deployment.s.sol:Deployment --legacy --fork-url https://rpc.tenderly.co/fork/bad1e0c5-b2ec-4fa8-ab95-44ea8c0830c8 --broadcast -vvvvv\"",
+    "anvil:avax": "anvil --fork-url https://api.avax.network/ext/bc/C/rpc@41745214",
+    "watch:script-local": "nodemon --ext sol --watch script/ --watch test --watch contracts --exec 'clear && forge script script/Deployment.s.sol:Deployment --legacy --fork-url http://127.0.0.1:8545 --broadcast -vvvvv'",
     "hardhat": "hardhat",
     "hardhat:kovan": "hardhat --network kovan",
     "hardhat:tenderly-main": "hardhat --network tenderlyMain",
@@ -111,8 +114,8 @@
     "external:halo:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset-halo --symbol ${SYMBOL} --verify"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@halodao/halodao-contract-addresses": "^1.0.16",
+    "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "2.0.0",
     "@nomiclabs/buidler-etherscan": "^2.1.0",
@@ -135,6 +138,7 @@
     "chai": "4.2.0",
     "chai-bignumber": "3.0.0",
     "chai-bn": "^0.2.1",
+    "concurrently": "^8.2.2",
     "defender-relay-client": "^1.7.0",
     "dotenv": "^8.2.0",
     "eth-sig-util": "2.5.3",
@@ -147,6 +151,7 @@
     "hardhat-typechain": "^0.3.3",
     "husky": "^4.2.5",
     "lowdb": "1.0.0",
+    "nodemon": "^3.0.3",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "pretty-quick": "^2.0.1",
