--- a/foundry.toml
+++ b/foundry.toml
@@ -4,14 +4,15 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
 cache_path  = 'cache_forge'
+fs_permissions = [{ access = "read", path = "./script"}]
 
 [rpc_endpoints]
 sepolia = "${SEPOLIA_RPC_URL}"
 fuji = "${FUJI_RPC_URL}"
 
-[etherscan]
-sepolia = { key = "${ETHERSCAN_API_KEY}" }
-fuji = { key = "${ETHERSCAN_API_KEY}" }
+# [etherscan]
+# sepolia = { key = "${ETHERSCAN_API_KEY}" }
+# fuji = { key = "${ETHERSCAN_API_KEY}" }
 
 [profile.nowarnings]
 
