--- a/deployments/deployments_config.json
+++ b/deployments/deployments_config.json
@@ -53,5 +53,6 @@
   "borrowRates": [
     "39000000000000000000000000",
     "39000000000000000000000000"
-  ]
+  ],
+  "marketId": "Xave Avalanche Market"
 }
