--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,11 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
 cache_path  = 'cache_forge'
-fs_permissions = [{ access = "read", path = "./script"}, { access = "read", path = "./test/data" }]
+fs_permissions = [
+  { access = "read", path = "./script"},
+  { access = "read", path = "./test/data" },
+  { access = "read", path = "./deployments" },
+]
 
 [rpc_endpoints]
 sepolia = "${SEPOLIA_RPC_URL}"
