--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-foundry": "^1.1.1",
-    "@halodao/halodao-contract-addresses": "^1.0.16",
+    "@halodao/halodao-contract-addresses": "^1.0.63",
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "2.0.0",
     "@nomiclabs/buidler-etherscan": "^2.1.0",
@@ -176,7 +176,8 @@
   "license": "AGPLv3",
   "dependencies": {
     "axios-curlirize": "^1.3.7",
-    "tmp-promise": "^3.0.2"
+    "tmp-promise": "^3.0.2",
+    "yarn": "^1.22.21"
   },
   "keywords": [
     "aave",
