--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "": "nodemon --ext js,ts --watch test --watch lib --exec 'clear && yarn test --no-compile'",
     "watch:script": "nodemon --ext sol --watch script/ --watch test --watch contracts --exec \"clear && forge script script/Deployment.s.sol:Deployment --legacy --fork-url https://rpc.tenderly.co/fork/bad1e0c5-b2ec-4fa8-ab95-44ea8c0830c8 --broadcast -vvvvv\"",
     "anvil:avax": "anvil --fork-url https://api.avax.network/ext/bc/C/rpc@41745214",
-    "watch:script-local": "nodemon --ext sol --watch script/ --watch test --watch contracts --exec 'clear && forge script script/Deployment.s.sol:Deployment --legacy --fork-url http://127.0.0.1:8545 --broadcast -vvvvv'",
+    "watch:script-local": "nodemon --ext sol --ext json --watch deployments/ --watch script/ --watch test --watch contracts --exec 'clear && FOUNDRY_PROFILE=nowarnings forge script script/Deployment.s.sol:Deployment --legacy --fork-url http://127.0.0.1:8545 --broadcast -vvvvv'",
     "hardhat": "hardhat",
     "hardhat:kovan": "hardhat --network kovan",
     "hardhat:tenderly-main": "hardhat --network tenderlyMain",
