--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   ],
   "scripts": {
     "run-env": "npm i && tail -f /dev/null",
-    "watch:script": "nodemon --ext sol --watch script/ --watch test --watch contracts --exec \"clear && forge script script/Deployment.s.sol:Deployment --legacy --fork-url https://rpc.tenderly.co/fork/bad1e0c5-b2ec-4fa8-ab95-44ea8c0830c8 --broadcast -vvvvv\"",
+    "watch:script": "nodemon --ext sol --watch script/ --watch test --watch contracts --exec \"clear && forge script script/LendingPoolDeployment.s.sol:LendingPoolDeployment --legacy --fork-url https://rpc.tenderly.co/fork/bad1e0c5-b2ec-4fa8-ab95-44ea8c0830c8 --broadcast -vvvvv\"",
     "anvil:avax": "anvil --fork-url https://api.avax.network/ext/bc/C/rpc@41745214",
     "anvil:sepolia": "anvil --fork-url https://eth-sepolia.g.alchemy.com/v2/U7tte8molsSlREKDCvXxIXR1OBmyKRhp",
-    "watch:script-local": "nodemon --ext sol,json --watch deployments/ --watch script/ --watch test --watch contracts --exec 'clear && FOUNDRY_PROFILE=nowarnings forge script script/Deployment.s.sol:Deployment --legacy --fork-url http://127.0.0.1:8545 --broadcast -vvvvv'",
-    "watch:script-local-metamask-account": "nodemon --ext sol,json --watch deployments/ --watch script/ --watch test --watch contracts --exec 'clear && FOUNDRY_PROFILE=nowarnings forge script script/Deployment.s.sol:Deployment --slow --account \"MMHotWallet#2\" --fork-url http://127.0.0.1:8545 --broadcast -vvvvv'",
+    "watch:script-local": "nodemon --ext sol,json --watch deployments/ --watch script/ --watch test --watch contracts --exec 'clear && forge script script/LendingPoolDeployment.s.sol:LendingPoolDeployment --legacy --fork-url http://127.0.0.1:8545 --broadcast -vvvvv'",
+    "watch:script-local-metamask-account": "nodemon --ext sol,json --watch deployments/ --watch script/ --watch test --watch contracts --exec 'clear && forge script script/LendingPoolDeployment.s.sol:LendingPoolDeployment --slow --account \"MMHotWallet#2\" --fork-url http://127.0.0.1:8545 --broadcast -v'",
     "hardhat": "hardhat",
     "hardhat:kovan": "hardhat --network kovan",
     "hardhat:tenderly-main": "hardhat --network tenderlyMain",
