--- a/deployments/xave_oracles_config.avalanche.json
+++ b/deployments/xave_oracles_config.avalanche.json
@@ -9,7 +9,7 @@
     {
       "basePriceFeed": "0x3368310bC4AeE5D96486A73bae8E6b49FcDE62D3",
       "decimals": 18,
-      "description": "EUROC/ETH Oracle",
+      "description": "EURC/ETH Oracle",
       "quotePriceFeed": "0x976B3D034E162d8bD72D6b9C989d545b839003b0"
     },
     {
@@ -27,17 +27,17 @@
   ],
   "lpOracles": [
     {
-      "description": "LP_EUROC_USDC Oracle",
+      "description": "LP-EURC-USDC Oracle",
       "ethUsdAggregator": "0x976B3D034E162d8bD72D6b9C989d545b839003b0",
       "fxPool": "0x7A1A919c033eBc0d9F23cBF2Aa41c24AEf826ca2"
     },
     {
-      "description": "LP_VEUR_USDC Oracle",
+      "description": "LP-VEUR-USDC Oracle",
       "ethUsdAggregator": "0x976B3D034E162d8bD72D6b9C989d545b839003b0",
       "fxPool": "0x28F3a9e42667519c83cB090b5c4f6bd34e9F5569"
     },
     {
-      "description": "LP_VCHF_USDC Oracle",
+      "description": "LP-VCHF-USDC Oracle",
       "ethUsdAggregator": "0x976B3D034E162d8bD72D6b9C989d545b839003b0",
       "fxPool": "0x0099111Ed107BDF0B05162356aEe433514AaC440"
     }
