--- a/liquidation-bot/package.json
+++ b/liquidation-bot/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "test": "yarn hardhat test",
     "run:bot": "yarn build:bot && ts-node scripts/runBot.ts",
+    "dev:bot": "nodemon --ext ts,sol --watch src/ --watch contracts/ --watch config/ --watch tsconfig.json --exec 'clear && yarn run:bot'",
     "lint:fix": "npx prettier '**/*.{json,sol,md,ts}' --write",
     "deploy:contracts": "hardhat run scripts/deploy.ts --network mainnet",
     "compile": "yarn hardhat compile",
@@ -32,8 +33,8 @@
     "@uniswap/v3-periphery": "1.4.1",
     "@uniswap/v3-sdk": "^3.9.0",
     "aws-sdk": "^2.1181.0",
-    "ethers": "^5.7.2",
     "axios": "^0.27.2",
+    "ethers": "^5.7.2",
     "hardhat": "^2.9.6",
     "lodash": "^4.17.21"
   },
@@ -59,6 +60,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "ethereum-waffle": "^3.0.0",
     "hardhat-gas-reporter": "^1.0.8",
+    "nodemon": "^3.1.0",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "slot20": "^0.0.3",
