--- a/liquidation-bot/package.json
+++ b/liquidation-bot/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
