🐇 updates on deployment parameters

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ coverage
 # Forge
 forge-artifacts/
 forge-cache/
-broadcast/
 cache_forge/
 out/
+broadcast/*/*/dry-run
+broadcast/*/*/test deployments
